--- a/compra.html
+++ b/compra.html
@@ -19,6 +19,7 @@
         <h2>OTIMA ESCOLHA!</h2>
         <h3> ♥obrigado por comprar em nossa loja♥</h3>
     </div>
+    <div class="container">
     <div class="comp">
 
         <!-- classe compra onde ficara no canto esquerdo mostrando as informações do pedido -->
@@ -107,6 +108,7 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
+</div>
 </body>
 <script src="js/javacomp.js"></script>
 
